# de-maxresing-www

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  config.toml  deploy.sh  generate.py  hugo.toml  makesite.py  pyproject.toml  requirements.txt  template.html
app/: conf.py  main.py
app/api/: net.py
app/model/: blogs.py  net.py
app/view/: html.py
content/: _index.md  about.md  contact.md  disclaimer.md  index.md  projects.md  skills.md
content/about/: index.md
content/blog/: 20210501-documentation-service-stopped.md  20210702-best-paper-award.md  20210930-new-challenge-devops.md  20211101-nanog83.md  20220731-data-science-and-cyber-security.md  20221101-research-analyst-at-netscout.md  20221230-added-blog-posts.md
content/contact/: index.md
content/disclaimer/: index.md
content/skills/: index.md
css/: maxresing-1-0-0.css
input/: about.html  contact.html  disclaimer.html  index.html  projects.html  skills.html
layout/: base.html  base.html.bak  header.html
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html
layouts/partials/: footer.html  header.html  hero.html  navbar.html
pub/css/: maxresing-1-0-0.css
public/: 404.html
public/categories/: index.html  index.xml
public/css/: styles.css
public/posts/: index.xml
public/tags/: index.html  index.xml
static/css/: boring-0-1-10.css  maxresing-1-0-0.css  maxresing-1-0-1.css
templates/: base.html.jinja  blog.html.jinja  footer.html.jinja  header.html.jinja  index.html.jinja  nav.html.jinja  page.html.jina  page.html.jinja  page_small.html.jinja
(+7 files in other folders)
