[tool.poetry]
name = "de-maxresing-www"
version = "0.1.0"
description = "Personal homepage teplated with mustache"
authors = ["Max Resing <max.resing@protonmail.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.9"
yacf = "^1.0.1"
markdown2 = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
